# Trade.tt

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: mylib.h
src/: main.cpp
